release: include Windows and Linux artifacts